auto/auto/test/errors/compilation_error/go/main.go
package main

import (
	"github.com/pulumi/pulumi/sdk/v3/go/pulumi"
)

func main() {
	pulumi.Run(func(ctx *pulumi.Context) error {
		will not compile
		return nil
	})
}
